ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gotify
  namespace: gotify
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.gotify2.mmchomelab.com`) # change to your domain
      kind: Rule
      services:
        - name: gotify2
          port: 80
    - match: Host(`gotify2.mmchomelab.com`) # change to your domain
      kind: Rule
      services:
        - name: gotify
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: mmchomelab-tls # change to your cert
